<resources>
    <string name="app_name">Melon Mods &amp; Skins</string>
    <string name="title_skins">Skins</string>
    <string name="title_mods">Mods</string>
    <string name="title_info">Info</string>
    <string name="title_details">Details</string>
    <string name="next_page">Next page</string>
    <string name="want_to_install">Want to install this %1$s?</string>
    <string name="install">Install</string>
    <string name="title_pre_downloading">Click on the button below to download %1$s</string>
    <string name="saved_download_folder">Saved to \n Download folder…</string>

    <!--ERRORS-->
    <string name="error_list_empty">Sorry, there are no options available at the moment, please try again later</string>
    <string name="error_network">Please, check WiFi or internet connection</string>
    <string name="error_not_found_item_id">Sorry, no such item was found, it may have been deleted, please try again later</string>
    <string name="error_placeholder">Oops, something is wrong, we are already dealing with it</string>

    <!--DOWNLOADs-->
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="download_failed">Download has been failed, please try again</string>
    <string name="download_paused">Download paused</string>
    <string name="download_pending">Download pending</string>
    <string name="download_successfully">Downloaded successfully</string>
    <string name="download_error">There\'s nothing to download</string>

    <!--BIG TEXT-->
    <string name="how_to_install_description">How to install: \n\n
1. Download mod from the button above\n\n
2. Open My File/File Manager/Zarchiver and go to the Download folder to find the zip pack you just download. Extract to /Archive name/\n\n
3. put all .melmod file to Melon Playground go to the Android/data/com.studio27.MelonPlayground/files/Mods/\n\n
4. put all .melsave file to Melon Playground go to the Android/data/com.studio27.MelonPlayground/files/Saves/\n\n
5. After completing these operations, restart the game to use the mod you imported.\n\n
6. You can also directly move the downloaded archive to the /Mods/ or /Saves/ folder depending on the files inside. And you can unpack it directly in the selected folder. For example, if all files in the archive are of the same type - only .melmod or only .melsave.\n\n
7. Please see the detailed instructions with screenshots in the Info tab
    </string>
    <string name="title_rate">Do you like this app?\nRate us on Google Play</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--NOTIFICATION-->
    <string name="reminders_notification_channel_id">Channel custom ID</string>
    <string name="reminders_notification_channel_name">Channel name</string>
    <string name="title_notification_reminder">New mods available! 💥</string>
    <string name="description_notification_reminder">Spice up your gameplay now 🎮</string>
    <string name="permission_not_granted">Permission not granted</string>

    <!--PRIVACY POLICY-->
    <string name="privacy_policy">Privacy Policy</string>

    <string name="com.crashlytics.android.build_id">1</string>
</resources>