<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_skins">

    <fragment
        android:id="@+id/navigation_skins"
        android:name="com.playground.modmelonskins.fragments.skins.SkinsFragment"
        android:label="@string/title_skins"
        tools:layout="@layout/fragment_skins" />

    <fragment
        android:id="@+id/navigation_mods"
        android:name="com.playground.modmelonskins.fragments.mods.ModsFragment"
        android:label="@string/title_mods"
        tools:layout="@layout/fragment_mods" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.playground.modmelonskins.fragments.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>